--- a/index.html
+++ b/index.html
@@ -4,150 +4,148 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The WhiteHouse - Kevinverse</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
-      /* Global Styles */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+        /* Global Styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #0e0e0e;
-    color: #f0f0f0;
-    line-height: 1.6;
-}
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #0e0e0e;
+            color: #f0f0f0;
+            line-height: 1.6;
+        }
 
-/* Hero Section */
-.hero-section {
-    background: url('img/hero-background.jpg') no-repeat center center/cover;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: #fff;
-}
+        /* Hero Section */
+        .hero-section {
+            background: url('img/hero-background.jpg') no-repeat center center/cover;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            color: #fff;
+        }
 
-.hero-content h1 {
-    font-size: 4rem;
-    margin-bottom: 20px;
-}
+        .hero-content h1 {
+            font-size: 4rem;
+            margin-bottom: 20px;
+        }
 
-.hero-content p {
-    font-size: 1.5rem;
-    margin-bottom: 30px;
-}
+        .hero-content p {
+            font-size: 1.5rem;
+            margin-bottom: 30px;
+        }
 
-.cta-button {
-    padding: 10px 30px;
-    background-color: #3b82f6;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    font-size: 1.2rem;
-    transition: background-color 0.3s ease;
-}
+        .cta-button {
+            padding: 10px 30px;
+            background-color: #3b82f6;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            font-size: 1.2rem;
+            transition: background-color 0.3s ease;
+        }
 
-.cta-button:hover {
-    background-color: #2563eb;
-}
+        .cta-button:hover {
+            background-color: #2563eb;
+        }
 
-/* Projects Section */
-.projects-section {
-    padding: 50px;
-    background-color: #121212;
-}
+        /* Projects Section */
+        .projects-section {
+            padding: 50px;
+            background-color: #121212;
+        }
 
-.projects-section h2 {
-    text-align: center;
-    margin-bottom: 40px;
-    font-size: 2.5rem;
-}
+        .projects-section h2 {
+            text-align: center;
+            margin-bottom: 40px;
+            font-size: 2.5rem;
+        }
 
-.projects-container {
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-}
+        .projects-container {
+            display: flex;
+            justify-content: space-around;
+            text-align: center;
+        }
 
-.project {
-    background-color: #1f1f1f;
-    padding: 20px;
-    border-radius: 8px;
-    width: 30%;
-}
+        .project {
+            background-color: #1f1f1f;
+            padding: 20px;
+            border-radius: 8px;
+            width: 30%;
+        }
 
-.project h3 {
-    font-size: 1.8rem;
-    margin-bottom: 15px;
-}
+        .project h3 {
+            font-size: 1.8rem;
+            margin-bottom: 15px;
+        }
 
-.project p {
-    font-size: 1.2rem;
-}
+        .project p {
+            font-size: 1.2rem;
+        }
 
-/* MetaHuman Section */
-.metahuman-section {
-    padding: 50px;
-    background-color: #181818;
-}
+        /* MetaHuman Section */
+        .metahuman-section {
+            padding: 50px;
+            background-color: #181818;
+        }
 
-.metahuman-section h2 {
-    text-align: center;
-    margin-bottom: 40px;
-    font-size: 2.5rem;
-}
+        .metahuman-section h2 {
+            text-align: center;
+            margin-bottom: 40px;
+            font-size: 2.5rem;
+        }
 
-.metahuman-profiles {
-    display: flex;
-    justify-content: space-around;
-}
+        .metahuman-profiles {
+            display: flex;
+            justify-content: space-around;
+        }
 
-.metahuman {
-    text-align: center;
-    width: 30%;
-}
+        .metahuman {
+            text-align: center;
+            width: 30%;
+        }
 
-.metahuman img {
-    width: 100%;
-    border-radius: 50%;
-    margin-bottom: 20px;
-}
+        .metahuman img {
+            width: 100%;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
 
-.metahuman h3 {
-    font-size: 1.8rem;
-    margin-bottom: 10px;
-}
+        .metahuman h3 {
+            font-size: 1.8rem;
+            margin-bottom: 10px;
+        }
 
-.metahuman p {
-    font-size: 1.2rem;
-}
+        .metahuman p {
+            font-size: 1.2rem;
+        }
 
-/* Footer */
-.footer {
-    padding: 20px;
-    text-align: center;
-    background-color: #1f1f1f;
-}
+        /* Footer */
+        .footer {
+            padding: 20px;
+            text-align: center;
+            background-color: #1f1f1f;
+        }
 
-.footer-content {
-    font-size: 1rem;
-}
+        .footer-content {
+            font-size: 1rem;
+        }
 
-.footer-link {
-    color: #3b82f6;
-    text-decoration: none;
-    margin-top: 20px;
-    display: block;
-}
+        .footer-link {
+            color: #3b82f6;
+            text-decoration: none;
+            margin-top: 20px;
+            display: block;
+        }
 
-.footer-link:hover {
-    text-decoration: underline;
-}
-
+        .footer-link:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -209,14 +207,11 @@ body {
         </div>
     </footer>
     
-    <script src="scripts.js">
-      // Example JavaScript - Placeholder for further dynamic content
-document.addEventListener('DOMContentLoaded', () => {
-    console.log('The WhiteHouse website is loaded!');
-    
-    // Placeholder for future interactions, animations, and blockchain integration
-});
-
+    <script>
+        // Example JavaScript - Placeholder for further dynamic content
+        document.addEventListener('DOMContentLoaded', () => {
+            console.log('The WhiteHouse website is loaded!');
+        });
     </script>
 </body>
 </html>
